fix: unreadable Tags

--- a/frontend/src/app/_components/Tag/Tag.module.css
+++ b/frontend/src/app/_components/Tag/Tag.module.css
@@ -1,14 +1,16 @@
 .tag {
   margin: 8px 16px;
   font-family: 'Open Sans', serif;
-  font-size: 12px;
   line-height: 16px;
-  text-transform: lowercase;
-  color: #242424;
   background: #d9d9d9;
   border-radius: 10px;
   border-color: transparent;
   width: 72px;
   height: 24px;
   overflow: hidden;
+}
+.text {
+  text-transform: lowercase;
+  font-weight: bold;
+  font-size: 12px;
 }
